fix: change font and container sizes to fit into viewport width (it was overflowing out the screen)

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -65,10 +65,10 @@
   color: var(--cod-gray);
   -webkit-text-stroke: 0.25px var(--barry-white);
 }
-@media (max-width: 480px) {
+@media screen and (max-width: 480px) {
   .navbar-wrapper {
-    width: 100%;
-    height: 45px;
+    width: 100vw;
+    height: auto;
     display: flex;
     flex-direction: row;
     border: none;
@@ -79,22 +79,21 @@
   .navbar-line {
     display: none;
   }
+  .navbar-item {
+    height: 3rem;
+  }
   .navbar-link {
-    padding: 0;
+    padding: 10px;
   }
   .navbar-list {
     width: 100%;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
     gap: 0;
-  }
-  .navbar-item {
-    width: auto;
-    min-width: 20%;
   }
   .navbar-link {
     width: 100%;
-    font-size: 16px;
+    font-size: .9rem;
     text-align: center;
   }
 }
